delete useless code

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "d2f935eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x250e97533a0>]"
+       "[<matplotlib.lines.Line2D at 0x1d4912d0100>]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
     "x,y = [], []\n",
     "\n",
     "import csv\n",
-    "file1 = open('kati.txt', 'r')\n",
+    "file1 = open('data.txt', 'r')\n",
     "Lines = file1.readlines()\n",
     "for row in Lines:\n",
     "    if re.match(\"[+-]?([0-9]*[.])?[0-9]+,[+-]?([0-9]*[.])?[0-9]+\",row):\n",
@@ -40,37 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "04a9a025",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              x         y\n",
-      "0      0.809561  0.936927\n",
-      "1      0.093485  0.944954\n",
-      "2      0.251349  0.517202\n",
-      "3      0.794526  0.043578\n",
-      "4      0.667887  0.763761\n",
-      "...         ...       ...\n",
-      "46983  0.241712  0.557339\n",
-      "46984  0.756168  0.566514\n",
-      "46985  0.193138  0.253440\n",
-      "46986  0.115652  0.870413\n",
-      "46987  0.443331  0.904817\n",
-      "\n",
-      "[46988 rows x 2 columns]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x250e9e5f340>]"
+       "[<matplotlib.lines.Line2D at 0x1d49146d700>]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "b6d1eec7",
    "metadata": {},
    "outputs": [
@@ -97,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[174  54  32 ...  97 189  74]\n"
+      "[4 2 2 ... 1 2 4]\n"
      ]
     }
    ],
@@ -106,7 +86,7 @@
     "from sklearn.cluster import KMeans\n",
     " \n",
     "#Initialize the class object\n",
-    "kmeans = KMeans(n_clusters= 200)\n",
+    "kmeans = KMeans(n_clusters= 5)\n",
     " \n",
     "#predict the labels of clusters.\n",
     "label = kmeans.fit_predict(df)\n",
