udf instead of functions

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1d4912d0100>]"
+       "[<matplotlib.lines.Line2D at 0x1d3d70a3760>]"
       ]
      },
      "execution_count": 3,
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1d49146d700>]"
+       "[<matplotlib.lines.Line2D at 0x1d3db997880>]"
       ]
      },
      "execution_count": 4,
